Modules/Lab/Instance/main.tf
resource "aws_subnet" "lab_subnet" {
  vpc_id                  = "${var.vpc.id}"
  cidr_block              = "172.16.${var.lab_instance.index}.0/24"
  availability_zone       = "${var.defaults.region}a"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.defaults.env}-${var.lab_instance.name}-subnet"
    Environment = "${var.defaults.env}"
  }
}

resource "aws_route_table" "public" {
  vpc_id = var.vpc.id

  tags = {
    Name = "${var.defaults.env}-${var.lab_instance.name}-route-table"
    Environment = "${var.defaults.env}"
  }
}

resource "aws_route" "public_internet_gateway" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = var.gateway.id
}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.lab_subnet.id
  route_table_id = aws_route_table.public.id
}
